--- a/lighthouse.css
+++ b/lighthouse.css
@@ -7,12 +7,14 @@ body
 header 
 {
     background-color: #869dc7;
+    
     height: 150px;
     margin-bottom: 0px;
     background-image: url(images/lighthousebanner.jpg);
     background-repeat: no-repeat;
 }
 
+/*Text image replacment*/
 h1 
 {
     text-indent: 100%;
@@ -39,31 +41,36 @@ footer
 {
     margin: 0 auto;
     width: 80%;
+    color: #000066;
+    
     min-width: 960px;
     max-width: 1200px;
-    background-color: #b3c7e6;
-    color: #000066;
+    background-color: #ffffff;
 }
 
+/* float nav to the next element on the page (main)*/
 nav 
 { 
     font-weight: bold;
     letter-spacing: 0.1em;
+    
     float: right;
-    width: 200px;
+    width: 175px;
+    margin-left: 10px;
 }
 
 nav ul
 {
     list-style-type: none;
+    
     margin: 0px;
     padding: 0px;
 }
-
 nav a
 {
     background-color: #b3c7e6;
     border-bottom: 1px solid #ffffff;
+    
     text-decoration: none;
     padding: 20px;
     display: block;
@@ -94,13 +101,14 @@ main ul{list-style-type: none;}
 main li
 {
     width: 225px;
-    display: inline-block;
     padding-bottom: 10px;
     margin: 10px;
     background-color: #eaeaea;
     text-align: center;
     font-style: italic;
     font-family: Georgia, serif;
+    
+    display: inline-block;
 }
 
 main p
@@ -116,6 +124,7 @@ aside
     padding: 20px;
     font-size: 80%;
     box-shadow: 5px 5px 5px #333333;
+    
     float: right;
     position: relative;
     top: -40px;
@@ -144,5 +153,5 @@ article header
 #floatright
 {
     float: right;
-    margin: 15px;
+    margin: 20px;
 }
